nullaway_error_40A00ADB-05A3-43C4-BC10-78723BA047F9.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-beans/src/main/java/org/springframework/beans/factory/config/FieldRetrievingFactoryBean.java:207: error: [NullAway] dereferenced expression targetClass is @Nullable
		this.fieldObject = targetClass.getField(this.targetField);
		                              ^
    (see http://t.uber.com/nullaway )
